--- a/maks.html
+++ b/maks.html
@@ -8,12 +8,12 @@
 <body>
   <div class="container">
     <header>
-      <h1>Привет, я Максим!</h1>
-      <p>Я отвечаю за структуру проекта и координацию работы с Git.</p>
+      <h1>Привет, я Максим</h1>
+      <p>Отвечаю за структуру проекта и координацию при работе с Git.</p>
     </header>
 
     <div class="photo-block">
-      <img src="img/11.jpg" alt="Фото Максима">
+      <img src="img/11.jpg" alt="это я">
       <p class="caption">Максим — просто и навсего делаю что-то и как-то </p>
     </div>
 
