--- a/index.html
+++ b/index.html
@@ -24,3 +24,5 @@
   </div>
 </body>
 </html>
+<button onclick="toggleTheme()">🌗 Переключить тему</button>
+<script src="js/dark-mode/dark-script.js"></script>
