--- a/dasha.html
+++ b/dasha.html
@@ -21,7 +21,9 @@
       <a href="index.html">← Назад на главную</a>
     </footer>
   </div>
+<button onclick="toggleTheme()">🌗 Переключить тему</button>
+
+  <script src="js/dark-mode/dark-script.js"></script>
+  <script src="js/animation/animation.js"></script>
 </body>
 </html>
-<button onclick="toggleTheme()">🌗 Переключить тему</button>
-<script src="js/dark-mode/dark-script.js"></script>
