--- a/maks.html
+++ b/maks.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Максим</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="js/animation/animation.css">
 </head>
 <body>
   <div class="container">
@@ -21,7 +22,10 @@
       <a href="index.html">← Назад на главную</a>
     </footer>
   </div>
+
+  <button onclick="toggleTheme()">🌗 Переключить тему</button>
+
+  <script src="js/dark-mode/dark-script.js"></script>
+  <script src="js/animation/animation.js"></script>
 </body>
 </html>
-<button onclick="toggleTheme()">🌗 Переключить тему</button>
-<script src="js/dark-mode/dark-script.js"></script>
