--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <p>© 2025 Команда Git-мастеров</p>
     </footer>
   </div>
+<button onclick="toggleTheme()">🌗 Переключить тему</button>
+
+  <script src="js/dark-mode/dark-script.js"></script>
+  <script src="js/animation/animation.js"></script>
 </body>
 </html>
-<button onclick="toggleTheme()">🌗 Переключить тему</button>
-<script src="js/dark-mode/dark-script.js"></script>
