--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
   <div class="container">
     <header>
       <h1>Добро пожаловать!</h1>
-      <p>Мы — команда, которая умеет работать с Git и создавать сайты вместе.</p>
+      <p>Мы — команда, которая практикует совместную работу с помощью Git.</p>
     </header>
 
     <section class="members">
       <a class="card" href="maks.html">Максим</a>
-      <a class="card" href="dasha.html">Даша</a>
+      <a class="card" href="dasha.html">Дашк</a>
       <a class="card" href="lera.html">Лера</a>
     </section>
+    <div class="game-button">
+      <a class="card big" href="game.html">🎮 Мини-игра</a>
+    </div>
 
     <footer>
-      <p>© 2025 Команда Git-мастеров</p>
+      <p>© 2025 БТК гр_№301</p>
     </footer>
   </div>
 <button onclick="toggleTheme()">🌗 Переключить тему</button>
